Fixed heroes searching
- separate heroes HotA and unique campaign heroes
- add new settings "Use unique heroes names" in search
- fix search hero in russian
- add Recent Files feature

--- a/Heroes3Editor/Lang/lang-data.fr.json
+++ b/Heroes3Editor/Lang/lang-data.fr.json
@@ -37,7 +37,6 @@
     "Melodia": "Melodia",
     "Gem": "Gem",
     "Uland": "Uland",
-    "Giselle": "Giselle",
 
     "Fafner": "Fafner",
     "Iona": "Iona",
@@ -147,7 +146,6 @@
     "Verdish": "Verdish",
     "Voy": "Voy",
     "Adrienne": "Adrienne",
-    "Kinkeria": "Kinkeria",
 
     "Erdamon": "Erdamon",
     "Fiur": "Fiur",
@@ -164,9 +162,9 @@
     "Grindan": "Grindan",
     "Inteus": "Inteus",
     "Labetha": "Labetha",
-    "Luna": "Luna",
-
-    "Gen. Kendal": "Gen. Kendal",
+    "Luna": "Luna"
+  },
+  "HotaHeroes": {
     "Anabel": "Anabel",
     "Cassiopeia": "Cassiopeia",
     "Corkes": "Corkes",
@@ -207,7 +205,8 @@
     "Eanswythe": "Eanswythe",
     "Frederick": "Frederick",
 
-    "Tarnum": "Tarnum"
+    "Giselle": "Giselle",
+    "Kinkeria": "Kinkeria"
   },
   "Skills": {
     "Pathfinding": "Orientation",
